[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/calculator_1.png" type="Texture" id=1]
[ext_resource path="res://Script/CalculatorIcon.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Calculatoricon" type="Node2D"]
script = ExtResource( 2 )

[node name="CalculatorIcon" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, 1 )
scale = Vector2( 0.227294, 0.208529 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = -71.0
margin_top = -93.0
margin_right = 70.0
margin_bottom = 94.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
