[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/Buttonquiz.png" type="Texture" id=1]
[ext_resource path="res://assets/newBackClass.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Minecraftia-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/CalculatorIcon.gd" type="Script" id=4]
[ext_resource path="res://Script/CanvasLayer_calculadora.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 65
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 65
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Node2D2" type="Node2D"]
script = ExtResource( 4 )

[node name="NewFundoSchool" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttonquiz" type="Sprite" parent="."]
position = Vector2( 608, 635 )
scale = Vector2( 0.389, 0.407 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Buttonquiz"]
margin_left = -102.828
margin_top = -41.769
margin_right = 118.172
margin_bottom = 51.231
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "1050"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonquiz2" type="Sprite" parent="."]
position = Vector2( 801, 635 )
scale = Vector2( 0.388655, 0.406594 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="Buttonquiz2"]
anchor_left = 0.327
anchor_top = 0.257
anchor_right = 0.867
anchor_bottom = 0.861
margin_left = -206.793
margin_top = -91.0443
margin_right = -178.573
margin_bottom = -90.9723
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "1005"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 309.0
margin_top = 439.0
margin_right = 1186.0
margin_bottom = 594.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
text = "QUIZ
Se você investir 1000$ na poupança, quanto você terá ao final do 1° mês? 
-> Fórmula do rendimento: M = C x (1+ i)^t \\n - juros= 0.5%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="errado" type="Button" parent="."]
show_behind_parent = true
margin_left = 551.0
margin_top = 612.0
margin_right = 652.0
margin_bottom = 660.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="certo" type="Button" parent="."]
show_behind_parent = true
margin_left = 747.0
margin_top = 606.0
margin_right = 855.0
margin_bottom = 660.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CanvasLayer" parent="." instance=ExtResource( 6 )]

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="errado" to="." method="_on_errado_pressed"]
[connection signal="pressed" from="certo" to="." method="_on_certo_pressed"]
